chore: renamed the output folder for the facial_recognition results.

--- a/model_notebook/facial_recognition.ipynb
+++ b/model_notebook/facial_recognition.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [
     {
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [
     {
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [
     {
@@ -395,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [
     {
@@ -795,7 +795,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [
     {
@@ -851,7 +851,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [
     {
@@ -948,7 +948,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [
     {
@@ -998,7 +998,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [
     {
@@ -1037,7 +1037,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [
     {
@@ -1098,7 +1098,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [
     {
@@ -1167,7 +1167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [
     {
@@ -1199,7 +1199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [
     {
@@ -1214,7 +1214,7 @@
      "output_type": "stream",
      "text": [
       "[Parallel(n_jobs=-1)]: Using backend ThreadingBackend with 8 concurrent workers.\n",
-      "[Parallel(n_jobs=-1)]: Done  34 tasks      | elapsed:    0.1s\n"
+      "[Parallel(n_jobs=-1)]: Done  34 tasks      | elapsed:    0.0s\n"
      ]
     },
     {
@@ -1231,7 +1231,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Parallel(n_jobs=-1)]: Done 150 out of 150 | elapsed:    0.3s finished\n",
+      "[Parallel(n_jobs=-1)]: Done 150 out of 150 | elapsed:    0.1s finished\n",
       "[Parallel(n_jobs=8)]: Using backend ThreadingBackend with 8 concurrent workers.\n",
       "[Parallel(n_jobs=8)]: Done  34 tasks      | elapsed:    0.0s\n",
       "[Parallel(n_jobs=8)]: Done 150 out of 150 | elapsed:    0.0s finished\n",
@@ -1278,7 +1278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [
     {
@@ -1287,25 +1287,25 @@
      "text": [
       "[Parallel(n_jobs=-1)]: Using backend ThreadingBackend with 8 concurrent workers.\n",
       "[Parallel(n_jobs=-1)]: Done  34 tasks      | elapsed:    0.0s\n",
-      "[Parallel(n_jobs=-1)]: Done 150 out of 150 | elapsed:    0.2s finished\n",
+      "[Parallel(n_jobs=-1)]: Done 150 out of 150 | elapsed:    0.1s finished\n",
       "[Parallel(n_jobs=8)]: Using backend ThreadingBackend with 8 concurrent workers.\n",
       "[Parallel(n_jobs=8)]: Done  34 tasks      | elapsed:    0.0s\n",
       "[Parallel(n_jobs=8)]: Done 150 out of 150 | elapsed:    0.0s finished\n",
       "[Parallel(n_jobs=-1)]: Using backend ThreadingBackend with 8 concurrent workers.\n",
       "[Parallel(n_jobs=-1)]: Done  34 tasks      | elapsed:    0.0s\n",
-      "[Parallel(n_jobs=-1)]: Done 150 out of 150 | elapsed:    0.4s finished\n",
+      "[Parallel(n_jobs=-1)]: Done 150 out of 150 | elapsed:    0.1s finished\n",
       "[Parallel(n_jobs=8)]: Using backend ThreadingBackend with 8 concurrent workers.\n",
       "[Parallel(n_jobs=8)]: Done  34 tasks      | elapsed:    0.0s\n",
       "[Parallel(n_jobs=8)]: Done 150 out of 150 | elapsed:    0.0s finished\n",
       "[Parallel(n_jobs=-1)]: Using backend ThreadingBackend with 8 concurrent workers.\n",
       "[Parallel(n_jobs=-1)]: Done  34 tasks      | elapsed:    0.0s\n",
-      "[Parallel(n_jobs=-1)]: Done 150 out of 150 | elapsed:    0.3s finished\n",
+      "[Parallel(n_jobs=-1)]: Done 150 out of 150 | elapsed:    0.1s finished\n",
       "[Parallel(n_jobs=8)]: Using backend ThreadingBackend with 8 concurrent workers.\n",
       "[Parallel(n_jobs=8)]: Done  34 tasks      | elapsed:    0.0s\n",
       "[Parallel(n_jobs=8)]: Done 150 out of 150 | elapsed:    0.0s finished\n",
       "[Parallel(n_jobs=-1)]: Using backend ThreadingBackend with 8 concurrent workers.\n",
       "[Parallel(n_jobs=-1)]: Done  34 tasks      | elapsed:    0.0s\n",
-      "[Parallel(n_jobs=-1)]: Done 150 out of 150 | elapsed:    0.2s finished\n",
+      "[Parallel(n_jobs=-1)]: Done 150 out of 150 | elapsed:    0.1s finished\n",
       "[Parallel(n_jobs=8)]: Using backend ThreadingBackend with 8 concurrent workers.\n",
       "[Parallel(n_jobs=8)]: Done  34 tasks      | elapsed:    0.0s\n",
       "[Parallel(n_jobs=8)]: Done 150 out of 150 | elapsed:    0.0s finished\n",
@@ -1336,7 +1336,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Parallel(n_jobs=-1)]: Done 150 out of 150 | elapsed:    0.2s finished\n",
+      "[Parallel(n_jobs=-1)]: Done 150 out of 150 | elapsed:    0.1s finished\n",
       "[Parallel(n_jobs=8)]: Using backend ThreadingBackend with 8 concurrent workers.\n",
       "[Parallel(n_jobs=8)]: Done  34 tasks      | elapsed:    0.0s\n",
       "[Parallel(n_jobs=8)]: Done 150 out of 150 | elapsed:    0.0s finished\n"
@@ -1380,7 +1380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [
     {
@@ -1442,7 +1442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [
     {
@@ -1485,7 +1485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [
     {
@@ -1677,7 +1677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [
     {
@@ -1758,7 +1758,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [
     {
@@ -1853,7 +1853,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [
     {
@@ -1930,7 +1930,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [
     {
@@ -1938,30 +1938,30 @@
      "output_type": "stream",
      "text": [
       "Model and results saved successfully!\n",
-      "Saved to: c:\\Users\\LENOVO\\Desktop\\Formative-2__Data-Preprocessing\\model_notebook\\model_results\n",
+      "Saved to: c:\\Users\\LENOVO\\Desktop\\Formative-2__Data-Preprocessing\\model_notebook\\facial_recognition_results\n",
       "\n",
       "Files saved:\n",
       "- facial_recognition_model.pkl (trained model)\n",
-      "- scaler.pkl (feature scaler)\n",
-      "- label_encoder.pkl\n",
-      "- feature_importances.csv\n",
-      "- performance_metrics.json\n"
+      "- facial_recognition_scaler.pkl (feature scaler)\n",
+      "- facial_recognition_label_encoder.pkl\n",
+      "- facial_recognition_feature_importances.csv\n",
+      "- facial_recognition_performance.json\n"
      ]
     }
    ],
    "source": [
     "# Create results directory\n",
-    "results_dir = NOTEBOOK_DIR / \"model_results\"\n",
+    "results_dir = NOTEBOOK_DIR / \"facial_recognition_results\"\n",
     "results_dir.mkdir(exist_ok=True)\n",
     "\n",
     "# Save model\n",
     "joblib.dump(rf_model, results_dir / \"facial_recognition_model.pkl\")\n",
-    "joblib.dump(scaler, results_dir / \"scaler.pkl\")\n",
+    "joblib.dump(scaler, results_dir / \"facial_recognition_scaler.pkl\")\n",
     "if 'le' in locals():\n",
-    "    joblib.dump(le, results_dir / \"label_encoder.pkl\")\n",
+    "    joblib.dump(le, results_dir / \"facial_recognition_label_encoder.pkl\")\n",
     "\n",
     "# Save feature importances\n",
-    "feature_importances.to_csv(results_dir / \"feature_importances.csv\", index=False)\n",
+    "feature_importances.to_csv(results_dir / \"facial_recognition_feature_importances.csv\", index=False)\n",
     "\n",
     "# Save performance metrics\n",
     "performance_metrics = {\n",
@@ -1972,17 +1972,17 @@
     "    'cv_std': float(cv_scores.std())\n",
     "}\n",
     "\n",
-    "with open(results_dir / \"performance_metrics.json\", 'w') as f:\n",
+    "with open(results_dir / \"facial_recognition_performance.json\", 'w') as f:\n",
     "    json.dump(performance_metrics, f, indent=4)\n",
     "\n",
     "print(\"Model and results saved successfully!\")\n",
     "print(f\"Saved to: {results_dir}\")\n",
     "print(\"\\nFiles saved:\")\n",
     "print(\"- facial_recognition_model.pkl (trained model)\")\n",
-    "print(\"- scaler.pkl (feature scaler)\")\n",
-    "print(\"- label_encoder.pkl\")\n",
-    "print(\"- feature_importances.csv\")\n",
-    "print(\"- performance_metrics.json\")"
+    "print(\"- facial_recognition_scaler.pkl (feature scaler)\")\n",
+    "print(\"- facial_recognition_label_encoder.pkl\")\n",
+    "print(\"- facial_recognition_feature_importances.csv\")\n",
+    "print(\"- facial_recognition_performance.json\")"
    ]
   }
  ],
