--- a/model_notebook/facial_recognition.ipynb
+++ b/model_notebook/facial_recognition.ipynb
@@ -1988,7 +1988,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -2002,7 +2002,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
